--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
+    "eslint": "^7.24.0",
     "express": "^4.16.4",
     "helmet": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
     "morgan": "^1.9.1",
     "pg": "^8.3.0",
+    "uuid": "^8.3.2",
     "xss": "^1.0.3"
   },
   "devDependencies": {
@@ -29,6 +33,8 @@
     "mocha": "^8.1.0",
     "nodemon": "^2.0.4",
     "postgrator-cli": "^3.1.0",
-    "supertest": "^3.3.0"
+    "supertest": "^3.4.2",
+    "winston": "^3.3.3",
+    "postgrator": "^4.1.1"
   }
 }
